--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title:            Benjamin J. Radford
-description:      The homepage of Dr. Benjamin J. Radford.
-copyright:        Benjamin J. Radford
+title:            Caesar F. Yang
+description:      The homepage of Caesar F. Yang.
+copyright:        Caesar F. Yang
        
 
 future:      false  # publish future dated posts --  true, false (default) 
