--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title:            Clean+Simple Theme
-description:      Something...
+title:            Caesar F. Yang		
+description:      The homepage of Caesar F. Yang.		
+copyright:        Caesar F. Yang
        
-
 future:      false  # publish future dated posts --  true, false (default) 
 highlighter: rouge
 markdown:    kramdown
