--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title:            Caesar F. Yang		
-description:      The homepage of Caesar F. Yang.		
-copyright:        Caesar F. Yang
+title:            Tony Z. Yang		
+description:      The homepage of Tony Z. Yang.		
+copyright:        Tony Z. Yang
        
 future:      false  # publish future dated posts --  true, false (default) 
 highlighter: rouge
